tests/baselines/reference/emitter.asyncGenerators.functionExpressions.es2018(strict=true).errors.txt
F2.ts(2,15): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
F3.ts(2,15): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== F1.ts (0 errors) ====
    const f1 = async function * () {
    }
==== F2.ts (1 errors) ====
    const f2 = async function * () {
        const x = yield;
                  ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }
==== F3.ts (1 errors) ====
    const f3 = async function * () {
        const x = yield 1;
                  ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }
==== F4.ts (0 errors) ====
    const f4 = async function * () {
        const x = yield* [1];
    }
==== F5.ts (0 errors) ====
    const f5 = async function * () {
        const x = yield* (async function*() { yield 1; })();
    }
==== F6.ts (0 errors) ====
    const f6 = async function * () {
        const x = await 1;
    }
==== F7.ts (0 errors) ====
    const f7 = async function * () {
        return 1;
    }
    